--- a/blocks/career-apply/career-apply.css
+++ b/blocks/career-apply/career-apply.css
@@ -15,6 +15,7 @@
 }
 
 .career-apply h2 {
+    margin-top: 0;
     color: var(--white);
     font-size: 28px;
     margin-bottom: 1rem;
@@ -34,6 +35,7 @@
 }
 
 .career-apply .button-container {
+    margin: 0;
     display: inline-flex;
     flex-direction: column;
 }
@@ -70,18 +72,21 @@
         max-width: 45rem;
         text-align: center;
         padding-top: 5rem;
+        padding-bottom: 5rem;
         margin-bottom: 5rem;
-    }
-
-    .career-apply h2 {
-        font-size: var(--heading-font-size-mxl);
     }
 
     .career-apply p {
         margin-bottom: 3.125rem;
     }
 
+    .career-apply h2 {
+        margin-top: 0;
+        font-size: var(--heading-font-size-mxl);
+    }
+
     .career-apply .button-container {
+        margin-bottom: 0;
         flex-direction: row;
     }
 
