--- a/blocks/hero-career/hero-career.css
+++ b/blocks/hero-career/hero-career.css
@@ -51,7 +51,7 @@
     font-size: var(--heading-font-size-s);
     font-style: var(--font-style-normal);
     line-height: 32px;
-    margin: 24px 16px 62px;
+    margin: 62px 16px;
     position: relative;
     text-indent: 0;
 }
@@ -126,7 +126,9 @@
     .hero-career .hero-career-right {
         background-color: unset;
         margin-top: 120px;
+        margin-bottom: 120px;
         padding-top: unset;
+        padding-bottom: unset;
         width: calc(100% - 336px - 4rem);
     }
 
