--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,7 @@
     monospace;
 
   /* body sizes */
+  --body-font-size-xxl: 22px;
   --body-font-size-xl: 20px;
   --body-font-size-l: 18px;
   --body-font-size-m: 16px;
@@ -182,7 +183,7 @@ h1 {
 
 h2 {
   font-size: var(--heading-font-size-m);
-  margin: 0 0 1.5rem;
+  margin: 3rem 0 1.5rem;
   font-weight: 500;
   line-height: 1.3em;
 }
@@ -249,6 +250,10 @@ p {
   font-size: var(--body-font-size-m);
   line-height: 1.7em;
   text-size-adjust: 100%;
+}
+
+p.lead {
+  font-size: var(--body-font-size-xl);
 }
 
 hr {
@@ -1219,6 +1224,10 @@ main .section.padded-inline .section-container {
 
   h6 {
     font-size: var(--heading-font-size-xxs);
+  }
+
+  p.lead {
+    font-size: var(--body-font-size-xxl);
   }
 
   p,
